# new-queue-monitor

./: README.md  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
debian/: changelog  control  copyright  files  new-queue-monitor.install  watch
po/: new-queue-monitor.pot  sv.mo  sv.po
src/new_queue_monitor/: main.py
