[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "new-queue-monitor"
version = "0.1.3"
description = "GTK4 monitor for Debian FTP NEW queue with notifications"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
dependencies = ["PyGObject>=3.42"]

[project.scripts]
new-queue-monitor = "new_queue_monitor.main:main"

[tool.setuptools.packages.find]
where = ["src"]
